changes padding on ranking page, adds icons and rearanges shared page, trims trait list a bit, moves placeholder for reorderable column in vain attempt to fix content jumping

--- a/src/style/CardStyle.scss
+++ b/src/style/CardStyle.scss
@@ -47,13 +47,12 @@ body {
     height: 27vh;
     width: 60vw;
     margin-left: 1.7vw;
-    margin-top: 20vw;
   }
   .rankingFade {
     position: absolute;
     width: 100%;
     left: 0;
-    margin-top: -8vh;
+    margin-top: -10vh;
   }
   .wideCard {
     width: 80vw;
